test/tests/errors/error-for-not-location3.sm
// true
// false
// false
/**/
/**/

program {
    const x: int = 0;
    for (x = 0 step 1 until 2) {}
}